# captchuccino

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: main.rs
src/utils/: captcha_builder.rs  i18n.rs  mod.rs
translations/: en.json  fr.json
